# clArk

./: .editorconfig  Cargo.toml  Dockerfile  README.md  run_bitcoind.sh
.github/workflows/: on-tag.yml
ark-lib/: Cargo.toml
ark-lib/src/: connectors.rs  fee.rs  forfeit.rs  lib.rs  musig.rs  napkin.rs  onboard.rs  oor.rs  util.rs
ark-lib/src/tree/: mod.rs  signed.rs
arkd/: Cargo.toml  build.rs
arkd-rpc-client/: Cargo.toml
arkd-rpc-client/src/: arkd.rs  lib.rs
arkd/rpc-protos/: arkd.proto
arkd/src/: lib.rs  main.rs  psbtext.rs  rpcserver.rs  util.rs
arkd/src/database/: mod.rs
arkd/src/round/: mod.rs
arkd/src/rpc/: arkd.rs  mod.rs
noah/: Cargo.toml
noah/src/: database.rs  exit.rs  lib.rs  psbt.rs  psbtext.rs
noah/src/onchain/: chain.rs  mod.rs
sled-utils/: Cargo.toml
sled-utils/src/: lib.rs
