
[workspace]
members = [
  "ark-lib",
  "arkd-rpc-client",
  "arkd",
  "noah",
]
exclude = [
  "napkin",
]

# TODO(stevenroose) at some point probably move these inline
[workspace.dependencies]
# Rust stack
anyhow = "1"
lazy_static = "=1.4.0"
serde = { version = "1", feature = [ "derive" ] }
ciborium = "0.2.1"

# bitcoin stack
bitcoin = "0.30"
bip39 = { version = "2.0.0", features = [ "rand" ] }
miniscript = "10.0"
# bdk = "1.0.0-alpha.3"
# bdk_electrum = "0.5.0"
# bdk_file_store = "0.3.0"
# bdk_bitcoind_rpc = "0.2.0"
bdk = { git = "https://github.com/vladimirfomene/bdk.git", rev = "a4f28c079e3bc4500e8329aeed230d8100d38617" }
bdk_electrum = { git = "https://github.com/vladimirfomene/bdk.git", rev = "a4f28c079e3bc4500e8329aeed230d8100d38617" }
bdk_file_store = { git = "https://github.com/vladimirfomene/bdk.git", rev = "a4f28c079e3bc4500e8329aeed230d8100d38617" }
bdk_bitcoind_rpc = { git = "https://github.com/vladimirfomene/bdk.git", rev = "a4f28c079e3bc4500e8329aeed230d8100d38617" }
electrum-client = "0.19.0"


# async + gRPC stack
tonic = "0.10"
prost = "0.12"
tokio = "1.35"
tokio-stream = { version = "0.1.14", features = [ "sync" ] }
