
[workspace]
members = [
  "ark-lib",
  "arkd-rpc-client",
  "arkd",
  "noah",

  "sled-utils",
]

# TODO(stevenroose) at some point probably move these inline
[workspace.dependencies]
# Rust stack
anyhow = { version = "1.0", features = ["backtrace"] }
lazy_static = "=1.4.0"
log = "0.4.20"
env_logger = "=0.10.1"
clap = { version = "4.4.18", features = [ "derive" ] }
serde = { version = "1", feature = [ "derive" ] }
ciborium = "0.2.1"

# bitcoin stack
bitcoin = { version = "0.30", features = [ "serde", "rand", "rand-std" ] }
bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
miniscript = "10.0"
rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
# bdk = "1.0.0-alpha.3"
# bdk_electrum = "0.5.0"
# bdk_file_store = "0.3.0"
# bdk_bitcoind_rpc = "0.2.0"
bdk = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
bdk_electrum = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
bdk_file_store = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
bdk_bitcoind_rpc = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
electrum-client = "0.19.0"

sled = "0.34.7"


# async + gRPC stack
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = [ "full" ] }
tokio-stream = { version = "0.1.14", features = [ "sync" ] }

