
[workspace]
members = [
  "ark-lib",
  "arkd-rpc-client",
  "arkd",
  "noah",

  "sled-utils",
]

# TODO(stevenroose) at some point probably move these inline
[workspace.dependencies]
# Rust stack
anyhow = { version = "1.0", features = ["backtrace"] }
lazy_static = "=1.4.0"
log = "0.4.20"
env_logger = "=0.10.1"
clap = { version = "4.4.18", features = [ "derive" ] }
serde = { version = "1", feature = [ "derive" ] }
serde_json = "1"
# TODO(stevenroose) consider messagepack or so
ciborium = "0.2.1"

# bitcoin stack
bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
miniscript = "10.0"
rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
# bdk = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
# bdk_esplora = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
# bdk_file_store = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
# bdk_bitcoind_rpc = { git = "https://github.com/stevenroose/bdk.git", rev = "67602f5b33ea82775d94a28df9f3f66d2ca9aa19" }
# bdk = "0.29.0"
bdk_wallet = "=1.0.0-alpha.13"
bdk_esplora = "0.15.0"
bdk_file_store = "0.13.0"
bdk_bitcoind_rpc = "0.12.0"

sled = "0.34.7"


# async + gRPC stack
tonic = { version = "0.10", features = [ "tls" ] }
prost = "0.12"
tokio = { version = "1.35", features = [ "full" ] }
tokio-stream = { version = "0.1.14", features = [ "sync" ] }

