[package]
name = "ark-lib"
version = "0.0.0"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"

[lib]
name = "ark"

[dependencies]
lazy_static.workspace = true
serde.workspace = true
ciborium.workspace = true
bitcoin.workspace = true

# using sanket's branch for musig2 code
secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = [ "serde" ] }
