[package]
name = "arkd"
version = "0.1.0"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"

[build-dependencies]
tonic-build = "0.10"

[dependencies]
ark-lib = { path = "../ark-lib" }
arkd-rpc-client = { path = "../arkd-rpc-client" }
sled-utils = { path = "../sled-utils" }

anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
bitcoin.workspace = true
bip39.workspace = true
bdk.workspace = true
bdk_file_store.workspace = true
bdk_bitcoind_rpc.workspace = true
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

rocksdb = "0.22.0"
sled.workspace = true
