[package]
name = "ark-noah"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "noah"

[dependencies]
ark-lib = { path = "../ark-lib" }
arkd-rpc-client = { path = "../arkd-rpc-client" }

anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
ciborium.workspace = true
bitcoin.workspace = true
bip39.workspace = true
miniscript.workspace = true
bdk.workspace = true
bdk_electrum.workspace = true
bdk_file_store.workspace = true
bdk_bitcoind_rpc.workspace = true
prost.workspace = true
tonic.workspace = true
tokio.workspace = true

sled = "0.34.7"
