[package]
name = "ark-noah"
version = "0.0.0"
edition = "2021"

[lib]
name = "noah"
path = "src/lib.rs"

[[bin]]
name = "noah"
path = "src/bin/noah/main.rs"

[dependencies]
ark-lib = { path = "../ark-lib" }
arkd-rpc-client = { path = "../arkd-rpc-client" }
sled-utils = { path = "../sled-utils" }

anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
ciborium.workspace = true
bitcoin.workspace = true
bip39.workspace = true
miniscript.workspace = true
bdk.workspace = true
bdk_electrum.workspace = true
bdk_file_store.workspace = true
bdk_bitcoind_rpc.workspace = true
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
sled.workspace = true

